<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leo.novoprojetofinal.app.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_aluno"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/aluno"
            android:backgroundTint="#0288e7"/>


        <Button
            android:id="@+id/btn_disciplinas"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/disciplinas"
            android:backgroundTint="#0288e7"/>


        <Button
            android:id="@+id/btn_atividades_extra"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/atividades_extras"
            android:backgroundTint="#0288e7"/>


        <Button
            android:id="@+id/btn_sair"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/sair"
            android:backgroundTint="#0288e7"/>
    </LinearLayout>
</ScrollView>
