<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leo.novoprojetofinal.app.ItemAtividadeExtraActivity"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:orientation="vertical">

            <TextView
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/nomee"
                android:textSize="27dp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/professorr"
                android:textSize="20dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/descricaoo"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_item_nome_atividade_extra"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/atividades_extras"
                android:textSize="35dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_view_item_professor_atividade_extra"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/professor"
                android:textSize="35dp"/>

            <TextView
                android:id="@+id/text_view_item_descricao_atividade_extra"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/atividades_extras"
                android:textSize="20dp"/>

        </LinearLayout>
    </LinearLayout>


</ScrollView>
