<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leo.novoprojetofinal.app.CadastroDisciplinaActivity"
    android:orientation="vertical">
    <LinearLayout
        android:padding="4dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_nome_disciplina"
                android:hint="@string/nome_da_disciplina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:maxLength="30"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="12">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_apelido_disciplina"
                android:hint="@string/apelido_da_disciplina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:maxLength="12"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="18">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_nome_professor_disciplina"
                android:hint="@string/nome_do_professor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:maxLength="18"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_quantidade_bimestres_disciplina"
                android:hint="@string/quantidade_de_bimestres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="1"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_salvar_disciplina"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_gravity="bottom|end"
            />
    </LinearLayout>

</ScrollView>