<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="45">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_edit_nome"
                android:hint="@string/nome_completo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:maxLength="45"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="35">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_edit_nome_escola"
                android:hint="@string/nome_da_escola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:maxLength="35"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_edit_media_escola"
                android:hint="@string/m_dia_da_escola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="3"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_edit_media_pessoal"
                android:hint="@string/m_dia_pessoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="3"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_edit_email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="30"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


</ScrollView>