<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:focusable="true"
    android:elevation="4dp"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cv_apelido_disciplina"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apelido_disciplina"
                android:textSize="28sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/cv_professor"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/professor"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_dia"
                android:layout_gravity="center_horizontal|center_vertical"/>

            <TextView
                android:id="@+id/cv_media"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_dia"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#0064ef"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>


    </LinearLayout>



</android.support.v7.widget.CardView>