<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leo.novoprojetofinal.app.AlunoActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_perfil_for"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:orientation="vertical">

                <TextView
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/nomee"
                    android:textSize="27dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="Escola/Instituição"
                    android:textSize="19sp"
                    android:textStyle="bold"/>


            </LinearLayout>

            <LinearLayout
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_nome_aluno"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/nome"
                    android:textSize="35dp"
                    />

                <TextView
                    android:id="@+id/text_view_nome_escola"
                    android:layout_weight="1"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/escola"
                    android:textSize="35dp"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</ScrollView>
